# ProjectZomboidJavaModLoader

./: CMakeLists.txt  README.MD  jvmInteractions.c  jvmInteractions.h  main.c  utils.c  utils.h
jvm/: bodyRewriter.c  bodyRewriter.h  directVMInteractions.c  directVMInteractions.h  insideVMInteractions.c  insideVMInteractions.h  jvmThreadInteractions.c  jvmThreadInteractions.h
utils/: checkOnErrorsInVM.c  checkOnErrorsInVM.h  exitCodeUtils.c  exitCodeUtils.h  jvmPropertiesCreationConstantUtils.h  jvmPropertiesCreationUtils.c  jvmPropertiesCreationUtils.h
utils/compilerUtils/: byteCodeStructures.h  vmOpcodes.h
